openwebrx (1.2.56) bullseye jammy; urgency=low

  * Added character set setting for the pager messages.
  * Fixed formatting issue in the Feature Report.
  * Fixed exception trying to report filtered pager messages.
  * Moved Multimon, DumpHFDL, DumpVDL2 decoders to ExecModule.
  * Made receiver location available to plugins via Utils.js.
  * Updated remaining Feature Report instructions.
  * Swapped opacity and theme chooser icons.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 22 Apr 2024 16:12:00 +0000

openwebrx (1.2.55) bullseye jammy; urgency=low

  * Refactored and greatly improved CW decoder.
  * Added NAVTEX decoder and background service.
  * Added LW/MW band and NAVTEX frequencies to the bandplan.
  * Added MQTT reports for APRS, AIS, PAGE, ISM modes.
  * Added MQTT reports for HFDL, VDL2, ACARS, DSC modes.
  * [jketterl] Added MQTT reporting.
  * [jketterl] Improved PlutoSDR source.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 15 Apr 2024 16:12:00 +0000

openwebrx (1.2.54) bullseye jammy; urgency=low

  * Made FT8/JS8/WSPR/etc. messages show in monospace font.
  * Added ability to click on FT8/JS8/etc. callsigns.
  * Added columns to the time displays.
  * Fixed locators not aging when updated.
  * Fixed race condition between move-profile requests.
  * Now defaulting all new profile fields to kHz.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 8 Apr 2024 16:12:00 +0000

openwebrx (1.2.53) bullseye jammy; urgency=low

  * Added ability to reorder profiles in the Settings.
  * Added option to ignore incomplete DSC messages.
  * Improved background service output to files.
  * Improved preamble detection in CCIR493.
  * Relaxed DSC FORMAT/EOS field requirements.
  * Fixed profile reordering when a source is reenabled.
  * Fixed wxsat frequencies in bands.json.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 25 Mar 2024 16:12:00 +0000

openwebrx (1.2.52) bullseye jammy; urgency=low

  * Added MID codes for coastal stations, by continent.